# ECAP5-DPROC

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
docs/: .arch.pdf.icloud  CMakeLists.txt
docs/arch/: 01_introduction.tex  02_features.tex  02_requirements.tex  03_functional.tex  arch.tex  main.tex  structure.tex  variables.tex
docs/arch/content/: 0_titlepage.tex  10_EXM.tex  11_WBM.tex  12_HZDM.tex  1_introduction.tex  2_overall_description.tex  2_requirements.tex  3_parameters.tex  3_partitioning.tex  3_requirements.tex  4_parameters.tex  4_partitioning.tex  5_overview.tex  6_REGM.tex  7_EMM.tex  8_IFM.tex  9_DECM.tex
docs/arch/figures/: .jump-logic-behavior.tex.icloud  .jump-logic.tex.icloud  architecture.tex  decm-arch.tex  emm-arch.tex  exm-behavior-arithmetic-logic.tex  exm-behavior-auipc.tex  external-interface.tex  ifm-arch.tex  ifm-behavior-jump-branch.tex  ifm-behavior-normal.tex  ifm-behavior-reset.tex  ifm-behavior-wait.tex  ifm-output-logic.tex  ifm-wishbone-master.tex  ifm-wishbone-read.tex  ifm.tex  instruction-encoding.tex  jump-logic-behavior.tex  jump-logic-output.tex  jump-logic.tex  pc-behavior.tex  pipeline-stage-state.tex  regm.tex  wbm-arch.tex  wbm-behavior-instruction-without-output.tex  wishbone-single-read-cycle.tex  wishbone-single-write-cycle.tex
docs/arch/tables/: .jump-logic.tex.icloud  control-interface.tex  decm-interface.tex  emm-upstream-requirements.tex  exm-behavior-store.tex  exm-interface.tex  ifm-interface.tex  ifm-upstream-requirements.tex  ifm-wishbone-master.tex  ifm.tex  jump-logic.tex  memory-interface.tex  regm-upstream-requirements.tex  regm.tex  wbm-upstream-requirements.tex  wishbone-datasheet.tex  wishbone-single-read-cycle.tex
docs/src/: CMakeLists.txt  conf.py  index.rst  report.rst
docs/src/_ext/: requirement.py
docs/src/_static/css/: custom.css
docs/src/arch/: 1_introduction.rst  2_overall-description.rst  3_requirements.rst  4_configuration.rst  5_architecture.rst  event.tex  index.rst  main.tex  requirement.tex  structure.tex
docs/src/arch-tex/: main.tex  requirement.tex
docs/src/arch-tex/content/: 10_EXM.tex  13_HZDM.tex  2_overall-description.tex  7_EMM.tex
docs/src/arch-tex/figures/: 3_wishbone-single-write-cycle.tex  5_top-arch.tex  8_ifm-state-diagram.tex
docs/src/arch-tex/tables/: 10_exm-behavior-arithmetic-logic.tex  10_exm-boffset-output.tex  11_lsm-bubble-input.tex  11_lsm-wishbone-single-read-cycle.tex  11_lsm-wishbone-single-write-cycle.tex  12_wbm-interface.tex  3_memory-interface.tex  4_instanciation-parameters.tex  6_regm-interface.tex  7_emm-interface.tex  8_ifm-interface.tex  8_ifm-wishbone-single-read-cycle.tex
docs/src/arch/content/: 0_titlepage.tex  10_EXM.tex  11_LSM.tex  11_WBM.tex  12_HZDM.tex  12_WBM.tex  13_HZDM.tex  13_debug.tex  1_introduction.tex  2_overall_description.tex  3_requirements.tex  4_parameters.tex  5_overview.tex  6_REGM.tex  7_EMM.tex  8_IFM.tex  9_DECM.tex
docs/src/arch/figures/: 10_exm-behavior-jump-jal.tex  10_exm-behavior-jump-jalr.tex  10_exm-behavior-lui.tex  10_exm-state-diagram.tex  11_lsm-state-diagram.tex  12_wbm-behavior-instruction-with-output.tex  3_instruction-encoding.tex  5_pipeline-behavior-wait-stall-resolution.tex  5_pipeline-behavior-wait-stall.tex  6_regm-behavior-read-before-write.tex  6_regm-behavior-write.tex  8_ifm-behavior-wait.tex  exm-arch.tex  exm-behavior-branch.tex  exm-behavior-load.tex  exm-behavior-store.tex  regm-arch.tex  regm-behavior-read.tex  top-arch.tex
docs/src/arch/tables/: 10_exm-behavior-load.tex  10_exm-branch-output.tex  10_exm-bubble-input.tex  10_exm-interface.tex  10_exm-result-output.tex  10_exm-upstream-requirements.tex  10_exm-wishbone-single-read-cycle.tex  10_exm-wishbone-single-write-cycle.tex  11_lsm-interface.tex  3_wishbone-single-write-cycle.tex  4_riscv-constants.tex  7_emm-upstream-requirements.tex  8_ifm-upstream-requirements.tex  8_ifm-wishbone-single-write-cycle.tex  9_decm-interface.tex  control-interface.tex  decm-upstream-requirements.tex  exm-behavior-branch.tex  hzdm-interface.tex  hzdm-upstream-requirements.tex  (+3 more)
docs/src/assets/: architecture.drawio  hazard.drawio  pipeline-stall-timing.json  pipeline-stall.drawio  riscv-encoding.drawio  riscv-opcode.drawio  traceability.drawio  wishbone-read.drawio  wishbone-read.json  wishbone-write.drawio  wishbone-write.json
tests/: CMakeLists.txt  tb_ifm.cpp  tb_regm.cpp
tests/benches/: CMakeLists.txt
tests/benches/decm/: tb_decm.cpp  tb_decm.sv
tests/benches/decode/: tb_decode.cpp  tb_decode.sv
tests/benches/ecap5_dproc/: tb_ecap5_dproc.cpp  tb_ecap5_dproc.sv
tests/benches/emm/: tb_emm.cpp  tb_emm.sv
tests/benches/execute/: tb_execute.cpp  tb_execute.sv
tests/benches/exm/: Makefile  tb_exm.cpp  tb_exm.sv
tests/benches/fetch/: tb_fetch.cpp  tb_fetch.sv
tests/benches/hazard/: tb_hazard.cpp  tb_hazard.sv
tests/benches/ifm/: Makefile  tb_ifm.cpp  tb_ifm.sv
tests/benches/loadstore/: tb_loadstore.cpp  tb_loadstore.sv  tb_loadstore_w_slave.cpp  tb_loadstore_w_slave.sv
tests/benches/lsm/: tb_lsm.cpp  tb_lsm.sv  tb_lsm_w_slave.cpp  tb_lsm_w_slave.sv
tests/benches/memory/: tb_memory.cpp  tb_memory.sv
tests/benches/registers/: tb_registers.cpp  tb_registers.sv
tests/benches/regm/: Makefile  tb_regm.cpp  tb_regm.sv
tests/benches/regs/: tb_regs.cpp  tb_regs.sv
tests/benches/top/: tb_top.cpp  tb_top.sv
tests/benches/writeback/: tb_writeback.cpp  tb_writeback.sv
tests/emulator/: CMakeLists.txt  emulator.cpp
tests/emulator/examples/: CMakeLists.txt  helloworld.S  helloworld.s  link.ld
tests/gtkwave/config/: exm.gtkw  ifm.gtkw
tests/gtkwave/filters/: ifm_state_filter.gtkw  instr_t_filter.gtkw
tests/include/: parse.h  testbench.h  testsuite.h
tests/lib/: parse.c  testsuite.c
tests/libs/: wishbone_slave.sv
tests/peripherals/: wishbone_slave.sv
tests/riscv-tests/: CMakeLists.txt  riscv-tests.cpp
tests/riscv-tests/env/: riscv_test.h
tests/riscv-tests/tests/: CMakeLists.txt
tests/testbenches/: tb_exm.cpp  tb_exm.sv  tb_ifm.cpp  tb_ifm.sv  tb_regm.cpp  tb_regm.sv
tests/testdata/: tb_exm.json
(+75 files in other folders)
